# evalys-arcium-gmpc-mxe

./: .gitignore  Arcium.toml  INSTALLATION.md  LICENSE  QUICK_INSTALL.md  README.md  package.json
docs/: crypto.md  mxe-spec.md
encrypted-ixs/: confidential_curve.rs  confidential_multi_user.rs  confidential_risk.rs  confidential_strategy.rs  evalys_gmpc_strategy.rs
examples/: local-test.ts
programs/evalys-arcium-gmpc-mxe/: Cargo.toml
programs/evalys-arcium-gmpc-mxe/src/: lib.rs
scripts/: deploy-devnet.sh
