[package]
name = "evalys-arcium-gmpc-mxe"
version = "0.1.0"
description = "Evalys Arcium gMPC MXE - Unified confidential intel and gMPC strategy planning"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "evalys_arcium_gmpc_mxe"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
arcium-anchor = "0.4.0"

